# jedi

./: .gitignore  CMakeLists.txt  README.md  centernet_dla34.cfg  config.cfg  cspresnext.cfg  densenet.cfg  onnx_detr.cfg  onnx_detr_other.cfg  run.sh  sample.cfg  setting.sh  yolov2.cfg  yolov2tiny.cfg  yolov3.cfg  yolov3tiny.cfg  yolov4.cfg  yolov4csp.cfg  yolov4tiny.cfg  yolov4x.cfg
cmake/: FindCuDNN.cmake
src/: CMakeLists.txt  analyzer.cc  binding.h  box.cc  box.h  cnet_application.cc  cnet_application.h  cnet_detections.cu  cnet_detections.h  coco.cc  coco.h  coco_format.cc  coco_format.h  coco_map.cc  common.h  config.cc  config.h  config_data.h  cuda.c  cuda.h  dataset.cc  dataset.h  detector.cc  detector.h  detector_comm.cc  detr_onnx_application.cc  detr_onnx_application.h  image.cc  image.h  image_cls_onnx_application.cc  image_cls_onnx_application.h  image_dataset.cc  image_dataset.h  image_opencv.cc  image_opencv.h  image_opencv_cnet.h  imagenet_format.cc  imagenet_format.h  inference_application.cc  inference_application.h  (+40 more)
